--- a/pagina1.css
+++ b/pagina1.css
@@ -3,28 +3,47 @@
 body{
   font-family: russo One;
 }
-header ul li.li-menu{
-  display:inline;
-  margin-right: 10px;
-  align-items: center;
-}
-header ul li a.a-menu{
-color: black;
-text-decoration: none;
-text-align: center;
-margin-top: 25px;
-margin-right: 30px;
-align-items: flex-end;
-position: relative;
-right: -900px;
-top: 25px;
-}
-header ul li a.a-menu:hover{
-  text-decoration: none;
-  color: green;
-}
+
+/*<--   Header   --> */
+
 header{
   background-color: grey;
   width: 100%;
   height: 80px;
 }
+
+header ul li.li-menu{
+  display:inline;
+  margin-right: 10px;
+}
+
+header ul li a.a-menu{
+color: black;
+text-decoration: none;
+align-items: flex-end;
+  position: relative;
+  right: -65%;
+  top: -40px;
+}
+
+header ul li a.a-menu:hover{
+  text-decoration: none;
+  color: green;
+}
+
+header nav div.buscador{
+  width: 90%;
+  max-width: 1000px;
+  margin: auto;
+  padding: 12px 0;
+  position: relative;
+  right: -1%;
+}
+
+input[type:search]{
+  padding: 10px;
+  padding-right: 35px;
+  border: none;
+}
+
+/*<--   Header   --> */
