--- a/pagina2.css
+++ b/pagina2.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Russo+One');
 
 body{
-  font-family: russo One;
+  font-family: russo One;}
+
   /*<--   Header   --> */
 
   header{
