--- a/pagina2.css
+++ b/pagina2.css
@@ -50,30 +50,29 @@ body{
 .container {
 display: flex;
 flex-direction: row;
+justify-content: space-around;
 flex-wrap: wrap;
 width: 100%;
-}
-
-article {
-
-  height: 40%;
-  width: 40%;
-}
-
-article.genero h1{
-  flex-wrap: nowrap;
-  flex-direction: row;
-  text-align: center;
-}
-
-article.genero img {
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
 }
 div.imgcont{
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+article {
+  height: 40%;
+  width: 40%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+article.genero h1{
+  flex-wrap: nowrap;
+  flex-direction: row;
+  text-align: center;
+}
+article.genero img {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
