--- a/pagina1.css
+++ b/pagina1.css
@@ -2,28 +2,39 @@
 
 body{
   font-family: russo One;
+  background-color: black;
+  width: 100%;
+  height: 500px;
 }
 
 /*<--   Header   --> */
 
 header{
-  background-color: grey;
   width: 100%;
   height: 80px;
 }
 
-header ul li.li-menu{
-  display:inline;
-  margin-right: 10px;
+nav{
+  display: flex;
+  background-color: grey;
 }
 
-header ul li a.a-menu{
-color: black;
+header ul{
+display: flex;
 text-decoration: none;
-align-items: flex-end;
-  position: relative;
-  right: -65%;
-  top: -40px;
+flex-wrap: wrap;
+flex-direction: row;
+width: 70%;
+justify-content: flex-end;
+align-items: center;
+}
+
+header ul li{
+  width: 12%;
+}
+
+header ul li a{
+  color: black;
 }
 
 header ul li a.a-menu:hover{
@@ -32,18 +43,11 @@ header ul li a.a-menu:hover{
 }
 
 header nav div.buscador{
-  width: 90%;
-  max-width: 1000px;
-  margin: auto;
-  padding: 12px 0;
-  position: relative;
-  right: -1%;
-}
-
-input[type:search]{
-  padding: 10px;
-  padding-right: 35px;
-  border: none;
+  width: 30%;
+  display: flex;
+align-items: center;
+justify-content: flex-start;
+margin-left: 20px;
 }
 
 /*<--   Header   --> */
