--- a/pagina2.css
+++ b/pagina2.css
@@ -37,9 +37,12 @@ body{
     padding: 12px 0;
     position: relative;
     right: -1%;
+    padding: 10px;
+    padding-right: 35px;
+    border: none;
   }
 
-  input[type:search]{
+/*  input[type:search]{
     padding: 10px;
     padding-right: 35px;
     border: none;
