--- a/pagina1.css
+++ b/pagina1.css
@@ -2,52 +2,21 @@
 
 body{
   font-family: russo One;
-  background-color: black;
+  background-color: grey;
   width: 100%;
-  height: 500px;
 }
 
 /*<--   Header   --> */
-
-header{
-  width: 100%;
-  height: 80px;
-}
-
-nav{
-  display: flex;
-  background-color: grey;
-}
-
-header ul{
-display: flex;
-text-decoration: none;
-flex-wrap: wrap;
-flex-direction: row;
-width: 70%;
-justify-content: flex-end;
-align-items: center;
-}
-
-header ul li{
-  width: 12%;
-}
-
-header ul li a{
-  color: black;
-}
-
-header ul li a.a-menu:hover{
-  text-decoration: none;
-  color: green;
-}
 
 header nav div.buscador{
   width: 30%;
   display: flex;
-align-items: center;
-justify-content: flex-start;
-margin-left: 20px;
+  align-items: center;
+  justify-content: flex-start;
+  margin-left: 20px;
 }
-
 /*<--   Header   --> */
+
+p{
+  color: white;
+}
