--- a/pagina2.css
+++ b/pagina2.css
@@ -5,49 +5,13 @@ body{
 
   /*<--   Header   --> */
 
-  header{
-    background-color: grey;
-    width: 100%;
-    height: 80px;
-  }
-
-  header ul li.li-menu{
-    display:inline;
-    margin-right: 10px;
-  }
-
-  header ul li a.a-menu{
-  color: black;
-  text-decoration: none;
-  align-items: flex-end;
-    position: relative;
-    right: -65%;
-    top: -40px;
-  }
-
-  header ul li a.a-menu:hover{
-    text-decoration: none;
-    color: green;
-  }
-
   header nav div.buscador{
-    width: 90%;
-    max-width: 1000px;
-    margin: auto;
-    padding: 12px 0;
-    position: relative;
-    right: -1%;
-    padding: 10px;
-    padding-right: 35px;
-    border: none;
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-left: 20px;
   }
-
-/*  input[type:search]{
-    padding: 10px;
-    padding-right: 35px;
-    border: none;
-  }
-
   /*<--   Header   --> */
 
 .container {
