--- a/pagina4.css
+++ b/pagina4.css
@@ -3,62 +3,76 @@
 body{
   font-family: russo One;
   background-color: #f8f8f8;
-  width: 100%;}
-
-  /*<--   Header   --> */
-  .uk-navbar{
-    background-color: grey;
-  }
-
-  header nav div.buscador{
-    width: 30%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-left: 20px;
-  }
-  /*<--   Header   --> */
-
-.container {
-display: flex;
-flex-direction: row;
-justify-content: space-around;
-flex-wrap: wrap;
-width: 100%;
+  width: 100%;
 }
-div.imgcont{
+
+/*<--   Header   --> */
+.uk-navbar{
+  background-color: grey;
+}
+
+header nav div.buscador{
+  width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-left: 20px;
+}
+.login{
+  display: flex;
+  align-items: center;
+  margin-top: 29px;
+  margin-right: 15px;
+}
+
+.li-menu{
+display: flex;
+align-items: center;
+}
+
+.signup{
+  margin-top: 23px;
+  margin-right: 15px;
+}
+/*<--   Header   --> */
+
+
+p{
+  color: black;
+  font-family: "times new roman";
+  font-size: 12px;
+}
+
+.populares{
+  width: 500px
+}
+
+.uk-card-body{
+  padding: 5px;
+}
+
+/*<--   Footer   --> */
+footer{
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-article {
-  height: 40%;
-  width: 40%;
-  margin-top: 1%;
-  margin-bottom: 1%;
-}
-article.genero h1{
-  flex-wrap: nowrap;
-  flex-direction: row;
-  text-align: center;
-}
-article.genero img {
-  position: relative;
+img.logo{
+  max-width: 50px;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+  margin-right: 10px;
+  justify-content: flex-start;
 }
 
-article h1 a:hover {
-  text-decoration: none;
+p.firma{
   color: black;
+  justify-content: flex-end;
+  font: "times new roman";
+  text-decoration: none;
 }
 
-.genclick {
-  width: 500px;
+.logoa:hover{
+  text-decoration: none;
 }
 
-
-hello.world {
-  position: absolute;
-}
+/*<--   Footer   --> */
