--- a/pagina4.css
+++ b/pagina4.css
@@ -1,78 +1,70 @@
 @import url('https://fonts.googleapis.com/css?family=Russo+One');
 
 body{
-  font-family: russo One;
-  background-color: #f8f8f8;
-  width: 100%;
+font-family: russo One;
+background-color: #f8f8f8;
+width: 100%;
 }
 
 /*<--   Header   --> */
-.uk-navbar{
-  background-color: grey;
-}
 
 header nav div.buscador{
-  width: 30%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  margin-left: 20px;
-}
-.login{
-  display: flex;
-  align-items: center;
-  margin-top: 29px;
-  margin-right: 15px;
-}
-
-.li-menu{
+width: 30%;
 display: flex;
 align-items: center;
+justify-content: flex-start;
+margin-left: 20px;
 }
 
-.signup{
-  margin-top: 23px;
-  margin-right: 15px;
+a.logoHeader{
+width: 20%;
 }
+
 /*<--   Header   --> */
 
 
 p{
-  color: black;
-  font-family: "times new roman";
-  font-size: 12px;
+color: black;
+font-family: "times new roman";
+font-size: 12px;
 }
 
 .populares{
-  width: 500px
+width: 500px
 }
 
 .uk-card-body{
-  padding: 5px;
+padding: 5px;
 }
 
+h2{
+display: flex;
+justify-content: center;
+}
 /*<--   Footer   --> */
 footer{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+display: flex;
+flex-direction: row;
+justify-content: center;
 }
 img.logo{
-  max-width: 50px;
-  display: flex;
-  margin-right: 10px;
-  justify-content: flex-start;
+max-width: 50px;
+display: flex;
+margin-right: 10px;
+justify-content: flex-start;
+min-width: 50px;
 }
 
 p.firma{
-  color: black;
-  justify-content: flex-end;
-  font: "times new roman";
-  text-decoration: none;
+color: black;
+justify-content: flex-end;
+font-family: russo One;
+font-size: 10px;
+text-decoration: none;
 }
 
 .logoa:hover{
-  text-decoration: none;
+text-decoration: none;
 }
 
 /*<--   Footer   --> */
