--- a/valoradas.css
+++ b/valoradas.css
@@ -22,6 +22,31 @@ h2{
 /* Lista */
 
 /* Lista */
+
+/*Infinite Scroll*/
+
+#infinite-list {
+  /* We need to limit the height and show a scrollbar */
+  width: 100%;
+  height: 300px;
+  overflow: auto;
+
+  /* Optional, only to check that it works with margin/padding */
+  /*margin: 30px;
+  padding: 20px;
+  border: 10px solid black;*/
+}
+
+/* Optional eye candy below: */
+li {
+  padding: 10px;
+  list-style-type: none;
+}
+li:hover {
+  background: #ccc;
+}
+
+
 /*<--   Footer   --> */
 footer{
   display: flex;
